# VkAdypt

./: CMakeLists.txt
dep/: CMakeLists.txt
dep/spdlog/include/spdlog/fmt/bundled/: core.h  format.h
dep/volk/: CMakeLists.txt
shader/: CMakeLists.txt  accelerated_scene.glsl  camera.glsl  ray_tracer.frag
shader/inc/: ray_tracer.frag
shader/include/spirv/: ray_tracer.frag.u32
src/: AcceleratedScene.cpp  AcceleratedScene.hpp  Application.cpp  Application.hpp  AtomicAllocator.hpp  AtomicBinaryBVH.hpp  BVHConfig.cpp  BVHConfig.hpp  BinaryBVH.hpp  BinaryBVHBase.hpp  Camera.cpp  Camera.hpp  Config.hpp  FlatBinaryBVH.hpp  FlatSBVH.cpp  FlatSBVH.hpp  ImGuiRenderer.cpp  ImGuiRenderer.hpp  Math.hpp  PSSBVHBuilder.cpp  PSSBVHBuilder.hpp  ParallelSBVHBuilder.cpp  ParallelSBVHBuilder.hpp  ParallelSort.hpp  QuadSpirv.hpp  RayTracer.cpp  RayTracer.hpp  SBVH.hpp  SBVHBuilder.cpp  SBVHBuilder.hpp  Scene.cpp  Scene.hpp  Shape.hpp  WideBVH.cpp  WideBVH.hpp  WideBVHBuilder.cpp  WideBVHDecl.inl  WideBVHImpl.inl  main.cpp
